fix(_header): Responsive overflow

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -59,6 +59,11 @@
   @media screen and (max-width: 550px) {
     width: 100%;
   }
+  .editor {
+    @media screen and (max-width: 550px) {
+      overflow: hidden;
+    }
+  }
 }
 .c-logo {
   margin: 25px 0;
